# cargo_toml

./: .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  LICENSE  README.md
examples/: parse.rs
src/: afs.rs  cargo_toml.rs  error.rs  features.rs  inheritable.rs
tests/: opt_level.toml  parse.rs  serialize.toml
tests/autobin/: Cargo.toml
tests/autolib/: Cargo.toml
tests/autolib2/: Cargo.toml
tests/autolib3/: Cargo.toml
tests/autoworkspace/: Cargo.toml
tests/autoworkspace/autolib/: Cargo.toml
tests/autoworkspace/src/: main.rs
tests/edition/: Cargo.toml
tests/inheritance/: Cargo.toml
tests/inheritance/hi/: Cargo.toml
tests/inheritance/hi/doubly_nested/: Cargo.toml
tests/inheritance/with-dir/: Cargo.toml
tests/lints/: Cargo.toml
tests/lints/ws/: Cargo.toml
tests/lints/ws_crate/: Cargo.toml
tests/lints/ws_inherit/: Cargo.toml
tests/renamed_lib/: Cargo.toml
tests/self-inherit/: Cargo.toml
tests/unstable/: Cargo.toml
