[package]
version = "0.17.1"
edition = "2021"
name = "cargo_toml"
authors = ["Kornel <kornel@geekhood.net>"]
description = "`Cargo.toml` struct definitions for parsing with Serde"
keywords = ["cargo", "metadata", "struct", "toml", "serde"]
categories = ["rust-patterns", "parser-implementations"]
homepage = "https://lib.rs/cargo_toml"
repository = "https://gitlab.com/lib.rs/cargo_toml"
documentation = "https://docs.rs/cargo_toml"
license = "Apache-2.0 OR MIT"
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE"]
rust-version = "1.66"

[lib]
name = "cargo_toml"
path = "src/cargo_toml.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.8"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.release]
tag-prefix=""
