[package]
name = "auto-bin"
version = "0.1.0"
publish = false
edition = "2018"
resolver = "2"
readme = false

[badges]
travis-ci = { repository = "…" }

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.test.package."*"]
debug = 0

[feature]
feat1 = []

[[bin]]
name = "a"

[[bin]]
name = "abcde"
path = "src/abcde.rs"

[[bin]]
name = "c"

[[bin]]
name = "e"
required-features = ["feat1"]
