[package]
name = "auto-lib"
version = "0.1.0"
authors = ["Kornel <kornel@geekhood.net>"]
autoexamples = false
publish = false
readme = "SOMETHING"

[lib]

[dependencies]

[badges]
coveralls = {}

[profile.release]
strip = false

[replace]
"foo:0.1.0" = { git = 'https://github.com/example/foo' }
"bar:1.0.2" = { path = 'my/local/bar' }
